--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -10,17 +10,18 @@
     "placeholderDesiredWeight": "Desired weight *",
     "bloodType": "Blood type *",
     "buttonStartloseweight": "Start losing weight",
-    "modalTitle": "Your recommended daily calorie intake is",
+    "modalTitleStart": "Your recommended daily",
+    "modalTitleFinish": "calorie intake is",
     "modalListTitle": "Foods you should not eat",
     "buttonYes": "Yes",
     "buttonNo": "No",
     "textLogOut": "Are you sure want to log out?",
     "registerText": "Register",
+    "loginText": "Login",
     "nameRange": "Minimum name length - 6 symbols",
     "nameValidation": "Please enter your name",
     "namePlaceholder": "Name *",
     "nameNotValide": "Invalid name",
-    "requiredLoginField": "Need to feel up this field",
     "emailRange": "Minimum email length - 6 symbols",
     "emailValidation": "Please enter valid email address, for example  'example@gmail.com'",
     "emailPlaceholder": "Email *",
@@ -36,28 +37,31 @@
     "titleZhovtyi": "Oleksandr Zhovtyi",
     "roleDeveloper": "Developer",
     "titleAlemaev": "Oleksandr Alemaev",
-    "login":"Sign in",
-    "register":"Registration",
+    "login": "Sign in",
+    "register": "Registration",
     "diary": "Diary",
     "calculator": "Calculator",
-    "addProductWarningSelect":"You must select a product from the list",
+    "addProductWarningSelect": "You must select a product from the list",
     "addProductWarningTry": "Please try again",
     "addProductWarningOk": "Ok",
     "placeholderProductName": "Enter product name",
     "placeholderProductWeight": "Grams",
-    "buttonAddProductText": "Add",
-    "productWeight": "g",
-    "productCalories": "kcal",
+    "add": "Add",
+    "gramm": "g",
+    "kcal": "kcal",
     "summaryTitle": "Summary for",
     "leftTitle": "Left",
     "consumedTitle": "Consumed",
     "dailyRateTitle": "Daily rate",
     "percentNormal": "% of normal",
-    "notRecomended":"Food not recommended",
-    "summaryNote":"To see the summary you need to calculate the daily calorie intake",
-    "summaryLink":"Go to calculate",
+    "notRecomended": "Food not recommended",
+    "summaryNote": "To see the summary you need to calculate the daily calorie intake",
+    "summaryLink": "Go to calculate",
     "exit": "Exit",
-    "404Title":"404 Page Not Found",
-    "404Text": "Oops! The page you're looking for doesn't exist.",
-    "404ButtonText": "Go home"
+    "notFoundTitle": "404 Page Not Found",
+    "notFoundText": "Oops! The page you're looking for doesn't exist.",
+    "goHome": "Go home",
+    "emptyText": "There are no records for this day",
+    "caclulateTitleStart": "Calculate your daily calorie",
+    "caclulateTitleFinish": "intake right now"
 }
