--- a/src/localization/ua.json
+++ b/src/localization/ua.json
@@ -10,17 +10,18 @@
     "placeholderDesiredWeight": "Бажана вага *",
     "bloodType": "Група крові *",
     "buttonStartloseweight": "Почніть худнути",
-    "modalTitle": "Ваша рекомендована добова норма споживання калорій становить",
+    "modalTitleStart": "Ваша рекомендована добова норма",
+    "modalTitleFinish": "споживання калорій становить",
     "modalListTitle": "Продукти, які ви не повинні їсти",
     "buttonYes": "Так",
     "buttonNo": "Ні",
     "textLogOut": "Ви дійсно хочете вийти?",
     "registerText": "Зареєструватися",
+    "loginText": "Увійти",
     "nameRange": "Мінімальна довжина імені - 6 символів",
     "nameValidation": "Будь ласка, введіть своє ім'я",
     "namePlaceholder": "Ім'я *",
     "nameNotValide": "Недійсне ім'я",
-    "requiredLoginField": "Потрібно заповнити це поле",
     "emailRange": "Мінімальна довжина email - 6 символів",
     "emailValidation": "Введіть дійсну адресу електронної пошти(email), наприклад 'example@gmail.com'",
     "emailPlaceholder": "Email *",
@@ -36,28 +37,31 @@
     "titleZhovtyi": "Олександр Жовтий",
     "roleDeveloper": "Розробник",
     "titleAlemaev": "Олександр Алемаєв",
-    "login":"Увійти",
-    "register":"Реєстрація",
+    "login": "Увійти",
+    "register": "Реєстрація",
     "diary": "Щоденник",
     "calculator": "Калькулятор",
-    "addProductWarningSelect":"Ви повинні вибрати продукт зі списку",
+    "addProductWarningSelect": "Ви повинні вибрати продукт зі списку",
     "addProductWarningTry": "Будь ласка спробуйте ще раз",
     "addProductWarningOk": "Добре",
     "placeholderProductName": "Введіть назву продукту",
     "placeholderProductWeight": "Грамів",
-    "buttonAddProductText": "Додати",
-    "productWeight": "грм",
-    "productCalories": "ккал",
+    "add": "Додати",
+    "gramm": "г",
+    "kcal": "ккал",
     "summaryTitle": "Сумарно",
     "leftTitle": "Залишилося",
     "consumedTitle": "Спожито",
     "dailyRateTitle": "Добова норма",
     "percentNormal": "% від норми",
-    "notRecomended":"Не рекомендована їжа",
-    "summaryNote":"Щоб побачити зведення, потрібно розрахувати добову норму калорій",
-    "summaryLink":"Перейти до розрахунку",
+    "notRecomended": "Не рекомендована їжа",
+    "summaryNote": "Щоб побачити зведення, потрібно розрахувати добову норму калорій",
+    "summaryLink": "Перейти до розрахунку",
     "exit": "Вихід",
-    "404Title":"404 Сторінка не знайдена",
-    "404Text": "Ой! Сторінка, яку ви шукаєте, не існує.",
-    "404ButtonText": "Перейти на домашню сторінку"
+    "notFoundTitle": "404 Сторінка не знайдена",
+    "notFoundText": "Ой! Сторінка, яку ви шукаєте, не існує.",
+    "goHome": "Перейти на домашню сторінку",
+    "emptyText": "За цей день записів немає",
+    "caclulateTitleStart": "Розрахуйте свою денну",
+    "caclulateTitleFinish": "норму калорій"
 }
