--- a/src/localization/ua.json
+++ b/src/localization/ua.json
@@ -70,6 +70,6 @@
     "errorWeight": "Вага має бути не менше 20кг",
     "reports": "Звіти",
     "weight": "Вага",
-    "month": "За весь час",
-    "all": "За останні 30 днів"
+    "month": "За останні 30 днів",
+    "all": "За весь час"
 }
