--- a/src/localization/ua.json
+++ b/src/localization/ua.json
@@ -71,5 +71,6 @@
     "reports": "Звіти",
     "weight": "Вага",
     "month": "За останні 30 днів",
-    "all": "За весь час"
+    "all": "За весь час",
+    "socialTitle": "Або продовжуйте з:"
 }
