--- a/src/localization/ua.json
+++ b/src/localization/ua.json
@@ -72,5 +72,6 @@
     "weight": "Вага",
     "month": "За останні 30 днів",
     "all": "За весь час",
-    "socialTitle": "Або продовжуйте з:"
+    "socialTitle": "Або продовжуйте з:",
+    "invalidEmail": "Недійсна електронна адреса"
 }
